modify sql to mongo

--- a/BegoniaChat/Views/Chat/Index.cshtml
+++ b/BegoniaChat/Views/Chat/Index.cshtml
@@ -45,7 +45,7 @@
         <script src="~/Scripts/jquery.signalR-2.4.1.min.js"></script>
         <script src="~/signalr/hubs"></script>
         <script>
-            var userID = "@Model.Account";
+            var userID = "@Model.acc";
             $(function () {
                 $("#userName").append(userID).show();
 
